# Calculator

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Example_output.csv  Project_Summary_Document.docx  README.md  script.py
include/: Calculator.h
src/: Calculator.cpp
test/: CMakeLists.txt  test_CalculatorTests.cpp
